# image_processing

./: .gitignore  CMakeLists.txt  README.md  border.cpp  border.hpp  filter.cpp  filter.hpp  label.cpp  label.hpp  main.cpp  morph.cpp  morph.hpp  morphology.cpp  morphology.hpp  object.cpp  object.hpp  util.cpp  util.hpp
src/images/morphing/: lines.json
src/images/morphing/animations/50frames/: lines.json
